#
#    You should have received a copy of the GNU Affero General Public
#    License along with this program.  If not, see:
#    <http://www.gnu.org/licenses/agpl.html>.
#
#######################################################################


2014-07-28  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 0.9999999985 released.

        * New version of Term::Menus paired with this release.

        * New version of Term::RawInput paired with this release.


2014-07-28  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 0.9999999984 released.

        * Fixes for Amazon AMI.


2014-07-27  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 0.9999999983 released.

        * Fixes for Amazon AMI.

        * New version of Term::Menus paired with this release.


2014-07-27  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 0.9999999982 released.

        * Fixed Makefile.PL for Amazon AMI.

        * Added Module::Pluggable.


2014-07-26  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 0.9999999981 released.

        * Fixed Makefile.PL for Amazon openSuSE.


2014-07-25  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 0.9999999980 released.

        * Fixed Makefile.PL for Amazon AMI (Pod::Man handling).


2014-07-24  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 0.9999999979 released.

        * Fixed Makefile.PL for Amazon AMI.


2014-07-24  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 0.9999999978 released.

        * Fixed Makefile.PL for Amazon AMI.


2014-07-24  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 0.9999999977 released.

        * Fixed Makefile.PL for Amazon AMI.


2014-07-24  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 0.9999999976 released.

        * Fixed Makefile.PL for Amazon AMI.

