@@ -14,7 +14,7 @@ not run its Makefile.PL or Build.PL.
 -----BEGIN PGP SIGNED MESSAGE-----
 Hash: SHA1
 
-SHA1 aecc43f556739f2f7cf565d14dfec4b8e2f020a4 ChangeLog
+SHA1 37a88f8a006bc8e55ee42e7b0ca7976998a1254d ChangeLog
 SHA1 d7f05f3c29deb4f29dd9291d5076899b3f92cd20 FIGlet_fonts/3-d.flf
 SHA1 8238eb029ef0be3083cd5982100b4000bd8aacb8 FIGlet_fonts/4x4_offr.flf
 SHA1 f3223bb52e36d14098e1ed1f7790593a09230d68 FIGlet_fonts/5lineoblique.flf
@@ -92,8 +92,8 @@ SHA1 5939c33dff38893a1dcf0ba68b97845f7c63e1fa FIGlet_fonts/wavy.flf
 SHA1 f81af8fd43e0f19c168343709749ef4da3972e6d FIGlet_fonts/weird.flf
 SHA1 62647027745e394450492878f8d8730548d83fa2 LICENSE
 SHA1 3969a1b82753ea591ce1b77ed0ccf1403b480052 MANIFEST
-SHA1 a3a402f3a21a73f47a804109627e36eaece71d54 META.yml
-SHA1 e48261acc4be19865541a71f5edc75435932465d Makefile.PL
+SHA1 3c63b2a30df5b5e960a16a232a0d5cd8eeb38452 META.yml
+SHA1 28bd348ba1bb821ef9054a3bbaa155d50cb7426a Makefile.PL
 SHA1 05aead0f26b0f71a00bad5badbf390f2c92dcd1d README
 SHA1 ecb089134bba590f02aa974be5a6e86d72cdb0dc UNINSTALL_CYGWIN
 SHA1 ade875b98aca4971a381d2e037ed009b52c2f8da bin/fullauto.pl
@@ -122,7 +122,7 @@ SHA1 6fed559b971e9d2f091e0776ddbb131be5225a36 inc/Module/Install/Win32.pm
 SHA1 ea528c813c3473a2674fcbed06531c2f795116ce inc/Module/Install/WriteAll.pm
 SHA1 00bb8470354d11bd7c2c74633083ebe627eb2b7e inc/Module/Install/with.pm
 SHA1 e1d3650b6801a3cb2e6de38574e9327914c96d40 install_mozrepl_plugin.ahk
-SHA1 ddf3dd3e76cbf5c974145b7f001e070b4e8071c1 lib/Net/FullAuto.pm
+SHA1 a57c058dd120f8f6dbe11dfdc1f40dbf4654e120 lib/Net/FullAuto.pm
 SHA1 cc3f8588c96516de2802c68be465447d17f781aa lib/Net/FullAuto/Custom/BackUp/README
 SHA1 5032ba28f88dbf163b0d4dd158948af9124568c9 lib/Net/FullAuto/Custom/README
 SHA1 5b1702f20efb104e3375934cf55a7438c19e109a lib/Net/FullAuto/Distro/fa_code.pm
@@ -139,11 +139,11 @@ SHA1 6fac6b17647d05b71441ac3783ceec38b9b71fa6 t/test.t
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v1
 
-iQEcBAEBAgAGBQJT1kj7AAoJEBa/9Pad787E7vcH+wY8ZRDMcu0x+CX7G5Vid6jI
-TfkKVhwj8f8C3C8xtCT4N/ulfS0iq5EqOsQYM1PFAqrAy25Mz2953ukor2nRpkyc
-Owgf7ATXsf3a9H0sTeOq533/bRHzShjpBG4ZH4HjZLjeW/yVBro61TfRhFdDKc7K
-SABYdSAsJbQTIX6RVmvKyRMzpl47YvPLHPuooayFpI4T7IrHsVHuGYLygwvxJiEe
-OIGPh0sLMBVJbIamagtQ0I9OmJyFF6zm1I/3uosUDx+o6Y43wYzrOAjljhprSck7
-pz5ymMr6lIk1YhheCFWUUMUn6O3kCH4eZ42nhKUxlDBHQXGJxfkPs2I1+l+inDI=
-=XhvL
+iQEcBAEBAgAGBQJT1o3nAAoJEBa/9Pad787Egp0H/jZBq5yhE9rTT0tf0MnRj8dL
+0WY+pSHzBvfuCGgnjBF/I9P7U6SuzSWOYUZPzcNAkB91WhH5GdSgnucXuausjwlM
+dw0u2rMgezcL64d6DVNRIZNGq2KShuU1foL0afyVT6yYs4epHjGHgh/dmUr2qgP6
+AUC3yTt2bQNMxIbdQ325iy6T9GmqJSqqLXHxSqIcdPu7/xVr0QGM4uqUMx6Ada7D
+8PniM4911AfuUKz2f4H/XlbEDSP4mBSHs7kvpnl6bd+WcvNm2QprfvuIcCOOabUO
+NFxVdpQ8QFMC7gpFbWd1Tl7mAHdPDmtUyA+4LVh6H9r/CzaMnZUSk3bdShIuT/8=
+=+O8/
 -----END PGP SIGNATURE-----
