@@ -22,7 +22,7 @@ package Net::FullAuto;
 #######################################################################
 
 
-our $VERSION='0.9999999985';
+our $VERSION='0.9999999986';
 
 
 use 5.005;
